--- a/LiteCommerce.Admin/Views/Account/ChangePassword.cshtml
+++ b/LiteCommerce.Admin/Views/Account/ChangePassword.cshtml
@@ -6,28 +6,35 @@
 @{
     WebUserData userData = WebUserData.FromCookieString(User.Identity.Name);
 }
-<form action="~/Account/ChangePassword" method="post">
-    <input name="userID" value="@userData.UserID" type="hidden" />
-    <span>@Html.ValidationMessage("userID")</span>
-    <label>User: <span>@userData.FullName</span></label>
-    <div class="form-group">
-        <label>Old Password: <span>@Html.ValidationMessage("oldPassword")</span></label>
-        <input name="oldPassword" type="password" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>New Password: <span>@Html.ValidationMessage("newPassword") @Html.ValidationMessage("notMatch")</span></label>
-        <input name="newPassword" type="password" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Confirm New Password: <span>@Html.ValidationMessage("confirmPassword") @Html.ValidationMessage("notMatch")</span></label>
-        <input name="confirmPassword" type="password" class="form-control" />
-    </div>
-    <div class="">
-        <button type="submit" class="btn btn-sm btn-primary">
-            <i class="fa fa-save"></i> Save
-        </button>
-        <a class="btn btn-sm btn-default" href="~/">
-            Cancel
-        </a>
-    </div>
-</form>
+<div class="box box-primary">
+    <form action="~/Account/ChangePassword" method="post">
+        <div class="box-body">
+            <input name="userID" value="@userData.UserID" type="hidden" />
+            <span>@Html.ValidationMessage("userID")</span>
+            <div class="form-group">
+                <label>User:</label>
+                <input type="text" readonly value="@userData.FullName" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label>Old Password: <span>@Html.ValidationMessage("oldPassword")@Html.ValidationMessage("wrongPassword")</span></label>
+                <input name="oldPassword" type="password" class="form-control" autofocus/>
+            </div>
+            <div class="form-group">
+                <label>New Password: <span>@Html.ValidationMessage("newPassword")</span></label>
+                <input name="newPassword" type="password" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label>Confirm New Password: <span> @Html.ValidationMessage("notMatch")</span></label>
+                <input name="confirmPassword" type="password" class="form-control" />
+            </div>
+        </div>
+        <div class="box-footer">
+            <button type="submit" class="btn btn-sm btn-primary">
+                <i class="fa fa-save"></i> Save
+            </button>
+            <a class="btn btn-sm btn-default" href="~/">
+                Cancel
+            </a>
+        </div>
+    </form>
+</div>
