--- a/LiteCommerce.Admin/Views/Customer/Index.cshtml
+++ b/LiteCommerce.Admin/Views/Customer/Index.cshtml
@@ -6,8 +6,8 @@
 <div class="box box-primary">
     <div class="box-body">
         <form action="~/Customer" method="get">
-            <div class="form-group row">
-                <div class="col-sm-5">
+            <div class="row">
+                <div class="col-sm-6 input-group-sm">
                     <select name="country" class="form-control">
                         <option value="">--All Countries--</option>
                         @{
@@ -25,13 +25,15 @@
                         }
                     </select>
                 </div>
-                <div class="input-group col-sm-6">
-                    <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
-                    <span class="input-group-btn">
-                        <button type="submit" class="btn btn-primary btn-flat">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
+                <div class="col-sm-6">
+                    <div class="input-group input-group-sm">
+                        <input name="searchValue" type="text" class="form-control" placeholder="Input search value..." value="@Model.SearchValue">
+                        <span class="input-group-btn">
+                            <button type="submit" class="btn btn-primary btn-flat">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </span>
+                    </div>
                 </div>
             </div>
         </form>
