--- a/LiteCommerce.Admin/Views/Order/Create.cshtml
+++ b/LiteCommerce.Admin/Views/Order/Create.cshtml
@@ -132,6 +132,7 @@
             </div>
             <div class="box">
                 <div class="box-header with-border" id="OrderDetail">
+                    <h3 class="box-title">Order Details:</h3>
                     @{
                         foreach (var detail in Model.Details)
                         {
@@ -160,7 +161,7 @@
                                     <input name="quantities" class="form-control" type="text" placeholder="Quantity" value="@detail.Quantity" />
                                 </div>
                                 <div class="box-tools pull-right col-sm-1">
-                                    <button type="button" onclick="CloseOrderDetail()">
+                                    <button type="button" onclick="CloseOrderDetail()" style="margin-top:30px">
                                         X
                                     </button>
                                 </div>
@@ -169,7 +170,7 @@
                     }
                 </div>
             </div>
-            <button type="button" onclick="AddDetail()"><i class="fa fa-plus"></i> Add Product</button>
+            <button type="button" onclick="AddDetail()"><i class="fa fa-plus"></i> Add Detail</button>
             <!-- /.box-body -->
             <div class="box-footer">
                 <button type="submit" class="btn btn-sm btn-primary">
@@ -205,7 +206,7 @@
                                     <input name="quantities" class="form-control" type="text" placeholder="Quantity"  />
                                 </div>
                                 <div class="box-tools pull-right col-sm-1">
-                                    <button type="button" onclick="CloseOrderDetail()">
+                                    <button type="button" onclick="CloseOrderDetail()" style="margin-top:30px">
                                         X
                                     </button>
                                 </div>`;
